Fix the position of the CanHaveWhitespaceChildren check.

Doing it after we check whether prev_in_flow is text is the right thing to do,
instead of what we do now, to account for sibling text-nodes that can make
ourself non-whitespace.

BUG=746437

Change-Id: If5aa9209d16d5532629a0f0e2f1730d18a193ebf